--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/slack.ts",
     "dev:s": "nodemon --exec ts-node src/slack.ts",
     "lint": "eslint ."
   },
